Make guest account credentials optional

--- a/demo-assessments/Makefile.in
+++ b/demo-assessments/Makefile.in
@@ -3,6 +3,9 @@ CS1101S_REPO_LOC=
 build: Dockerfile secrets.exs .env docker-run.sh
 	docker build -t cadet .
 
+rebuild: Dockerfile secrets.exs .env docker-run.sh
+	docker build -t cadet --no-cache .
+
 run:
 	docker run \
 		-p 80:80 -p 4000:4001 \
