`make stop` now deletes old containers (see #7)

--- a/cadet-container/templates/Makefile.in
+++ b/cadet-container/templates/Makefile.in
@@ -20,4 +20,4 @@ all:
 	make run
 
 stop:
-	docker stop $$(docker ps | grep cadet | awk '{print $$1;}')
+	docker rm $(docker stop $(docker ps -a -q --filter ancestor=cadet --format="{{.ID}}"))
