--- a/cadet-container/templates/nginx.conf
+++ b/cadet-container/templates/nginx.conf
@@ -11,6 +11,9 @@ http {
   server {
     listen 4001;
 
+    error_log /log/nginx-error.log warn;
+    access_log /log/nginx-access.log combined;
+
     location / {
       proxy_pass http://localhost:4000;
       proxy_set_header Upgrade $http_upgrade;
